test/compile_errors/err_goto_enter_sibling_block.w
//! expect-check-fail: goto would enter a block from outside

fn main:
    if true:
        goto 'sibling
    else:
        'sibling 0
